<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FB5D13"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_Desarrollador"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCurso"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_Curso"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCentro"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txt_Centro"
        android:textSize="35sp"
        android:textStyle="bold" />

</LinearLayout>