<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myOrange"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="353dp"
        android:layout_height="277dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img_logoDescription"
        app:srcCompat="@drawable/memory_game_animals"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="40dp" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:backgroundTint="@color/myPurple"
        android:text="@string/btn_Jugar"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="20dp" />

    <Button
        android:id="@+id/btnLevel"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:backgroundTint="@color/myPurple"
        android:text="@string/btn_NivelF"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/txtPuntuaciones"
        android:layout_width="330dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:text="@string/txt_Puntuaciones"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="10dp" />

    <fragment
        android:id="@+id/scoreFragment"
        android:name="com.diego_saez.memory.fragments.ScoreFragment"
        android:layout_width="330dp"
        android:layout_height="171dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:backgroundTint="@color/myPurple"
        tools:layout="@layout/fragment_score"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="10dp" />

    <Button
        android:id="@+id/btnCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:backgroundTint="@color/myPurple"
        android:text="@string/btn_Creditos"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="30dp" />

</LinearLayout>